refactor: localized description

--- a/lib/src/localization/app_fr.arb
+++ b/lib/src/localization/app_fr.arb
@@ -35,7 +35,7 @@
   "@resumePresent": {
     "description": "Emploi ou formation en cours"
   },
-  "description": "Développeur & Imagineer",
+  "description": "Développeur Imagineer",
   "@description": {
     "description": "My description"
   },
