feat: localized resume alert dialog buttons

--- a/lib/src/localization/app_en.arb
+++ b/lib/src/localization/app_en.arb
@@ -23,6 +23,14 @@
   "@projectsSectionTitle": {
     "description": "Title of Projects section"
   },
+  "englishLanguage": "English",
+  "@englishLanguage": {
+    "description": "English language resume"
+  },
+  "frenchLanguage": "French",
+  "@frenchLanguage": {
+    "description": "French language resume"
+  },
   "resume": "Resume",
   "@resume": {
     "description": "Resume"
