--- a/lib/src/localization/app_fr.arb
+++ b/lib/src/localization/app_fr.arb
@@ -23,6 +23,14 @@
   "@projectsSectionTitle": {
     "description": "Titre de la section Projets"
   },
+  "englishLanguage": "Anglais",
+  "@englishLanguage": {
+    "description": "CV en Anglais"
+  },
+  "frenchLanguage": "Français",
+  "@frenchLanguage": {
+    "description": "CV en Français"
+  },
   "resume": "CV",
   "@resume": {
     "description": "CV"
