--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -77,7 +77,7 @@
         },
         {
             "job": "Développeur Web",
-            "company": "Solutions Multi Techniques",
+            "company": "Association FAIRE",
             "description": "Développement du site web de l'association, en collaboration au sein d'un groupe de développeurs. Ce site web offre à ses visiteurs la possibilité d'en savoir plus sur l'association et de la rejoindre en tant que membres.\nÀ ce jour, le site web a attiré plus de 10 000 visites.",
             "startYear": 2021,
             "endYear": 2021,
