--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -77,7 +77,7 @@
         },
         {
             "job": "Web Developer",
-            "company": "Solutions Multi Techniques",
+            "company": "Association FAIRE",
             "description": "Development of the association's website, in collaboration with a group of developers. It provides visitors with the opportunity to learn more about the association and become members.\nTo date, the website has attracted over 10,000 visits.",
             "startYear": 2021,
             "endYear": 2021,
