--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -88,7 +88,9 @@
                 "Dart",
                 "Firebase"
             ],
-            "url": "https://www.association-faire.fr"
+            "link": {
+                "url": "https://www.association-faire.fr"
+            }
         }
     ],
     "projects": [
